; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_cipher.c_mbedtls_cipher_crypt.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_cipher.c_mbedtls_cipher_crypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_cipher_crypt(i32* %0, i8* %1, i64 %2, i8* %3, i64 %4, i8* %5, i64* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i64*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i64, align 8
  store i32* %0, i32** %9, align 8
  store i8* %1, i8** %10, align 8
  store i64 %2, i64* %11, align 8
  store i8* %3, i8** %12, align 8
  store i64 %4, i64* %13, align 8
  store i8* %5, i8** %14, align 8
  store i64* %6, i64** %15, align 8
  %18 = load i32*, i32** %9, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = load i64, i64* %11, align 8
  %21 = call i32 @mbedtls_cipher_set_iv(i32* %18, i8* %19, i64 %20)
  store i32 %21, i32* %16, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %7
  %24 = load i32, i32* %16, align 4
  store i32 %24, i32* %8, align 4
  br label %56

25:                                               ; preds = %7
  %26 = load i32*, i32** %9, align 8
  %27 = call i32 @mbedtls_cipher_reset(i32* %26)
  store i32 %27, i32* %16, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %25
  %30 = load i32, i32* %16, align 4
  store i32 %30, i32* %8, align 4
  br label %56

31:                                               ; preds = %25
  %32 = load i32*, i32** %9, align 8
  %33 = load i8*, i8** %12, align 8
  %34 = load i64, i64* %13, align 8
  %35 = load i8*, i8** %14, align 8
  %36 = load i64*, i64** %15, align 8
  %37 = call i32 @mbedtls_cipher_update(i32* %32, i8* %33, i64 %34, i8* %35, i64* %36)
  store i32 %37, i32* %16, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %31
  %40 = load i32, i32* %16, align 4
  store i32 %40, i32* %8, align 4
  br label %56

41:                                               ; preds = %31
  %42 = load i32*, i32** %9, align 8
  %43 = load i8*, i8** %14, align 8
  %44 = load i64*, i64** %15, align 8
  %45 = load i64, i64* %44, align 8
  %46 = getelementptr inbounds i8, i8* %43, i64 %45
  %47 = call i32 @mbedtls_cipher_finish(i32* %42, i8* %46, i64* %17)
  store i32 %47, i32* %16, align 4
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %51

49:                                               ; preds = %41
  %50 = load i32, i32* %16, align 4
  store i32 %50, i32* %8, align 4
  br label %56

51:                                               ; preds = %41
  %52 = load i64, i64* %17, align 8
  %53 = load i64*, i64** %15, align 8
  %54 = load i64, i64* %53, align 8
  %55 = add i64 %54, %52
  store i64 %55, i64* %53, align 8
  store i32 0, i32* %8, align 4
  br label %56

56:                                               ; preds = %51, %49, %39, %29, %23
  %57 = load i32, i32* %8, align 4
  ret i32 %57
}

declare dso_local i32 @mbedtls_cipher_set_iv(i32*, i8*, i64) #1

declare dso_local i32 @mbedtls_cipher_reset(i32*) #1

declare dso_local i32 @mbedtls_cipher_update(i32*, i8*, i64, i8*, i64*) #1

declare dso_local i32 @mbedtls_cipher_finish(i32*, i8*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
